--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <div class="row gy-5">
 
       <div class="col-xl-4 col-md-6">
+        <a href="https://vidhyaraja.vercel.app/">
         <div class="post-item position-relative h-100" data-aos="fade-up" data-aos-delay="100">
 
           <div class="post-img position-relative overflow-hidden">
@@ -131,9 +132,11 @@
           </div>
 
         </div>
+      </a>
       </div><!-- End post item -->
 
       <div class="col-xl-4 col-md-6">
+        <a href="https://vidhyaraja3.vercel.app/">
         <div class="post-item position-relative h-100" data-aos="fade-up" data-aos-delay="200">
 
           <div class="post-img position-relative overflow-hidden">
@@ -160,9 +163,11 @@
           </div>
 
         </div>
+        </a>
       </div><!-- End post item -->
 
       <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+        <a href="https://vidhyaraja2.vercel.app/">
         <div class="post-item position-relative h-100">
 
           <div class="post-img position-relative overflow-hidden">
@@ -189,6 +194,7 @@
           </div>
 
         </div>
+        </a>
       </div><!-- End post item -->
 
     </div>
