--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
             <hr>
 
-            <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+            <a href="https://vidhyaraja.vercel.app/" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
         </div>
@@ -159,7 +159,7 @@
 
             <hr>
 
-            <a href="/VRFWF/index1.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+            <a href="https://vidhyaraja3.vercel.app/" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
         </div>
@@ -190,7 +190,7 @@
 
             <hr>
 
-            <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+            <a href="https://vidhyaraja2.vercel.app/" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
         </div>
