--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt="AgriCulture">
+        <img src="assets/img/logo.png" alt="AgriCulture" style="vertical-align: middle;">
+  <span style="color: darkgreen; font-weight: bold; margin-left: 10px;">
+    VidhyadiRajaFarmerProducerCompany
+  </span>
         <!-- <h1 class="sitename">AgriCulture</h1>  -->
       </a>
 
@@ -52,8 +55,6 @@
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Our Services</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#blog">Blog</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -69,13 +70,16 @@
 
   <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
-    <div class="carousel-item active">
-      <img src="assets/img/carousel-1.jpg" alt="">
-      <div class="carousel-container">
-        <h2>VidhyadiRajaFarmerProducerCompany. L. T. D</h2>
-        <p>VidhyadiRaja Farmer Producer Company Ltd. is dedicated to uplifting small and marginal farmers through collective farming,modern techniques.</p>
-      </div>
-    </div><!-- End Carousel Item -->
+<div class="carousel-item active">
+  <img src="assets/img/carousel-1.png" alt="">
+  <div class="carousel-container">
+    <h2>VidhyadiRajaFarmerProducerCompany</h2>
+    <p style="text-align: center;">
+      VidhyadiRaja Farmer Producer Company Ltd. is dedicated to uplifting small and marginal farmers through collective farming, modern techniques.
+    </p>
+  </div>
+</div><!-- End Carousel Item -->
+
 
     
 
@@ -303,7 +307,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 mb-4 mb-lg-0">
-          <img src="assets/img/img_long_5.jpg" alt="Image " class="img-fluid img-overlap" data-aos="zoom-out">
+          <img src="assets/img/img_long_99.png" alt="Image " class="img-fluid img-overlap" data-aos="zoom-out">
         </div>
         <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
           <h3 class="content-subtitle text-white opacity-50">Why Choose Us</h3>
