--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo.png" alt="AgriCulture" style="vertical-align: middle;">
-  <span style="color: darkgreen; font-weight: bold; margin-left: 10px;">
-    VidhyadiRajaFarmerProducerCompany
+  <span style="color: darkgreen; font-weight: bold; margin-left: 10px; margin-top: 10px;">
+   <h4> VidhyadiRajaFarmerProducerCompany</h4>
   </span>
         <!-- <h1 class="sitename">AgriCulture</h1>  -->
       </a>
@@ -269,7 +269,7 @@
                 </div>
                 <div class="service-item-content">
                   <h3 class="service-heading">Training & Capacity Building</h3>
-                 <p>Empowering farmers with knowledge through workshops, field demonstrations, and expert guidance.</p>
+                 <p>Empowering farmers with knowledge through workshops, field demonstrations, and guidance.</p>
         
                 </div>
               </div>
@@ -529,8 +529,9 @@
         <div class="footer-contact pt-3">
           <p>VidhyadiRaja Farmer Producer Company Ltd.</p>
           <p>Kerala, India</p>
-          <p class="mt-3"><strong>Phone:</strong> <span>+91 98765 43210</span></p>
-          <p><strong>Email:</strong> <span>contact@vidhyadirajafpc.com</span></p>
+        <p class="mt-3"><strong>Phone:</strong> <span>+91 93498 51600</span></p>
+<p><strong>Email:</strong> <span>vidhyadirajafwf@gmail.com</span></p>
+
         </div>
       </div>
 
