--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
           <span class="sitename">VidhyadiRaja FPC</span>
         </a>
         <div class="footer-contact pt-3">
-          <p>Anaswara 
+          <p>13/177 Anaswara 
 Thrikkunnapuzha South 
 Sooranad </p>
           <p>south 
